# sefop-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-integration-tests.yml  ci-unit-tests.yml
data/1/: data.json
data/2/: data.json
docs/: architecture.md  commenting-code.md  unit-testing-guide.md
src/: cli.py  dependencies.py
src/application/: engine.py
src/application/service/: base_strategy.py  optimization_response.py  optimization_service.py
src/application/strategy/heuristic/: greedy_calories.py
src/application/strategy/mip/: mip_strategy.py
src/application/strategy/mip/optimization/: optimization.py
src/application/strategy/mip/optimization/components/: constraint_client_implies_cargo.py  constraint_forbid_cargo.py  constraint_limit_budget.py  constraint_limit_volume.py  constraint_limit_weight.py  objective_calories.py  objective_client_diversity.py  objective_revenue.py  variable_select_cargo.py  variable_select_client.py  variable_select_product.py
src/application/strategy/mip/optimization/model_abstraction/: linear_constraint.py  model_solution.py  model_variable.py  optimization_model.py
src/application/strategy/mip/optimization/solvers/: base_technology_solver.py  highs_solver.py  xpress_solver.py
src/application/strategy/mip/postprocess/: postprocess.py
src/application/strategy/mip/preprocess/: pre_processed_data.py  preprocess.py
src/controller/: cli.py  dependencies.py
src/domain/: product.py  recommendation.py  request.py
src/infrastructure/: json_data_loader.py
src/infrastructure/config/: settings.py
src/optimization/: base_strategy.py  engine.py  postprocessing.py  pre_processed_data.py  preprocessing.py
src/optimization/strategy/heuristic/: greedy_calories.py
src/optimization/strategy/mip/: mip_strategy.py
src/optimization/strategy/mip/optimization/: optimization.py
src/optimization/strategy/mip/optimization/components/: constraint_limit_budget.py  constraint_limit_weight.py  objective_calories.py  variable_select_product.py
src/optimization/strategy/mip/optimization/model_abstraction/: linear_constraint.py  linear_expression.py  model_variable.py  optimization_model.py
src/optimization/strategy/mip/optimization/solvers/: base_technology_solver.py  highs_solver.py
src/optimization/strategy/mip/postprocess/: postprocess.py
src/optimization/strategy/mip/preprocess/: pre_processed_data.py  preprocess.py
src/services/: base_data_loader.py  base_strategy.py  engine.py  json_data_loader.py  optimization_service.py  settings.py
tests/application/: test_engine.py
tests/application/service/: test_optimization_response.py  test_optimization_service.py
tests/application/strategy/heuristic/: test_greedy_calories.py
tests/application/strategy/mip/: test_mip_strategy.py
tests/application/strategy/mip/model_abstraction/: test_linear_constraint.py  test_linear_expression.py
tests/application/strategy/mip/optimization/components/: test_constraint_limit_budget.py  test_constraint_limit_weight.py  test_objective_calories.py  test_variable_select_product.py
tests/application/strategy/mip/preprocess/: test_preprocess.py
tests/domain/: test_product.py  test_recommendation.py  test_request.py
tests/helpers/lp_comparer/: __init__.py  comparer.py  lp_parser.py  models.py  parser_adapter.py  test_comparer.py
tests/infrastructure/: test_json_data_loader.py
tests/optimization/: test_engine.py
tests/optimization/strategy/heuristic/: test_greedy_calories.py
tests/optimization/strategy/mip/: test_mip_strategy.py
tests/optimization/strategy/mip/model_abstraction/: test_linear_constraint.py  test_linear_expression.py
tests/optimization/strategy/mip/optimization/components/: test_constraint_limit_budget.py  test_constraint_limit_weight.py  test_objective_calories.py  test_variable_select_product.py
tests/optimization/strategy/mip/preprocess/: test_preprocess.py
tests/services/: test_engine.py  test_json_data_loader.py  test_optimization_response.py  test_optimization_service.py
tests/unit/domain/: test_product.py  test_recommendation.py  test_request.py
