[project]
name = "sefop-python-starter"
version = "1.0.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]  # src/ → imports start from inside src/; "." → project root on sys.path so tests.helpers.* is importable
markers = [
    "integration: marks tests that require an external solver (deselect with '-m not integration')",
]

[tool.black]
line-length = 88
target-version = ["py312"]